# CreditCardOpt

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
app/: main.py
src/data/: cards.json  loader.py  mock_db.py
src/models/: schemas.py
src/optimizer/: engine.py
tests/: test_optimizer.py
