[project]
name = "credit-card-opt"
version = "0.1.0"
description = "Credit Card Recommendation engine using MILP optimization"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ortools>=9.8.3296",
    "streamlit>=1.31.0",
    "pydantic>=2.6.1",
    "pandas>=2.2.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pyright]
extraPaths = ["."]
venvPath = "."
venv = "venv"
